--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -42,7 +42,7 @@
   <div class="row" ng-show="isSignedIn">
     <div class="col-md-9">
        <a class="btn red newBtn" href="/#/admin/users/new" >
-                      New User   
+                      {{_('New User')}}   
                     </a>
 
     </div>
