--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -251,11 +251,11 @@
             <ul class="dropdown-menu drp-dwn-right " role="menu">
               <li>
                <a href="" ng-click="showAssigneeTags(account)">
-                   <i class='fa fa-tags'></i> Add tags </a>
+                   <i class='fa fa-tags'></i> {{_('Add tags')}} </a>
               </li>
               <li>
                <a href="" ng-click="editbeforedelete(account)">
-                   <i class='fa fa-trash-o'></i> Delete </a>
+                   <i class='fa fa-trash-o'></i> {{_('Delete')}} </a>
               </li>
             </ul>
           </div>
