--- a/templates/admin/users/user_new.html
+++ b/templates/admin/users/user_new.html
@@ -57,7 +57,7 @@
                                         <div class="row">
                                             <div class="col-md-9">
                                                 <div class="form-group">
-                                                    <span>Invite people from your team and start working together in seconds. Everyone you invite will receive a welcome email.</span>
+                                                    <span>{{_('Invite people from your team and start working together in seconds.')}} {{_('Everyone you invite will receive a welcome email.')}}</span>
                                                     <br>
                                                     <br>
                                                     <div class="col-md-12">
@@ -70,7 +70,7 @@
                                                                         <label class="sr-only" for="exampleInputEmail2">Email</label>
                                                                         <input type="email" class="form-control" id="exampleInputEmail2" ng-model="email.email" placeholder="exp@gmail.com" required>
                                                                     </div>
-                                                                    <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(email, emails, 'emails')" >Add</button>
+                                                                    <button type="submit" class="btn blue jfk-button jfk-button-action" ng-click="pushElement(email, emails, 'emails')" >{{_('Add')}}</button>
                                                                     <button type="submit" ng-click="showEmailForm = false" class="btn btn-default">X</button>
                                                                 </form>
                                                             </div>
@@ -82,13 +82,13 @@
                                                         </li>
                                                         <li>
                                                             <a class="btn-link addAnotherPhone" ng-hide="showEmailForm" ng-click="showEmailForm = true">
-                                                                <i class="icon-plus"></i> Add a new email address </a>
+                                                                <i class="icon-plus"></i> {{_('Add a new email address')}} </a>
                                                         </li>
                                                     </ul>
 
                                                   <br>
                                                   <div class="form-group">
-                                                    <textarea id="some-textarea" placeholder="Hi i want to add you to this project ..." id="noteBody" class="form-control ng-pristine ng-valid " rows="7" ng-model="message"></textarea>
+                                                    <textarea id="some-textarea" placeholder="{{_('Hi i want to add you to this project ...')}}" id="noteBody" class="form-control ng-pristine ng-valid " rows="7" ng-model="message"></textarea>
                                                      </div>
                                                         
                                                   </div>
@@ -102,7 +102,7 @@
                             </div>
                             <div class="col-md-12">
                                  <a class="btn red newBtn pull-right" href="/#/admin/users" ng-click="addNewUser(message)"  >
-                                              Invite    
+                                              {{_('Invite')}}    
                                             </a>
                             </div>
                         
