--- a/templates/discovers/discover_new.html
+++ b/templates/discovers/discover_new.html
@@ -38,7 +38,7 @@
     </div>
     <div class="" ng-show="immediateFailed">
         <div class="col-md-12">
-            <h1>Sign-in Button;</h1>
+            <h1>{{_("Sign-in Button")}};</h1>
             <span id="signin">
                 <span id="myGsignin"></span>
             </span>
@@ -57,11 +57,11 @@
                                         <div class="row">
                                             <div class="col-md-9">
                                                 <div class="form-group">
-                                                    <span>Create new topic related to your company</span>
+                                                    <span>{{_('Create new topic related to your company')}}</span>
                                                     <br>
                                                     <br>
                                                     <div class="col-md-12">
-                                                        <input type="text" required id="id_topic" class="form-control" ng-model="topic" placeholder="topic">
+                                                        <input type="text" required id="id_topic" class="form-control" ng-model="topic" placeholder="{{_('topic')}}">
                                                     </div>
                                                     <br/>
                                                     <br/>
@@ -77,7 +77,7 @@
                             </div>
                             <div class="col-md-12">
                                  <a class="btn red newBtn pull-right" ng-click="addNewTopic()"  >
-                                              Add    
+                                              {{_('Add')}}    
                                             </a>
                             </div>
                         
